examples/test/testpolicy19934.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19934
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key20: value28
      key30: value6
      key26: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value43
          key11: value35
      podSelector:
        matchLabels:
          key20: value9
          key18: value33
          key3: value19
